[gd_scene load_steps=4 format=2]

[ext_resource path="res://Source/Textures/TEST_Tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://Source/scripts/GameScript.gd" type="Script" id=2]
[ext_resource path="res://Source/Levels/nextTurnBtn.gd" type="Script" id=3]

[node name="GameNode" type="Node2D"]
position = Vector2( 80, 0 )
script = ExtResource( 2 )

[node name="Environment" type="TileMap" parent="."]
rotation = -0.000697852
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 1
occluder_light_mask = 0
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 131072, 2, 0, 131073, 4, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 196608, 2, 0, 196609, 2, 0, 196610, 4, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 4, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 0, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 1, 0, 327685, 1, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 1, 0, 327690, 1, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 1, 0, 327695, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 1, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 1, 0, 393231, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 1, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 3, 0, 524303, 3, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 0, 0, 655367, 0, 0, 655368, 3, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 3, 0, 720904, 3, 0, 720905, 1, 0, 720906, 1, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 2, 0, 720911, 2, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 0, 0, 786444, 0, 0, 786445, 2, 0, 786446, 2, 0, 786447, 2, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 0, 0, 851979, 0, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 0, 0, 917514, 0, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 0, 0, 983049, 0, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0 )

[node name="Structures" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( 12, 9, 0, 13, 17, 0, 14, 18, 0, 65547, 9, 0, 65548, 15, 0, 65549, 16, 0, 65550, 19, 0, 131076, 6, 0, 131083, 20, 0, 131084, 16, 0, 131085, 8, 0, 131086, 19, 0, 196619, 14, 0, 196620, 17, 0, 196621, 17, 0, 196622, 15, 0, 655361, 9, 0, 655362, 17, 0, 655363, 18, 0, 655372, 5, 0, 720897, 20, 0, 720898, 16, 0, 720899, 19, 0, 786433, 20, 0, 786435, 19, 0, 851969, 20, 0, 851970, 7, 0, 851971, 19, 0, 917505, 14, 0, 917506, 17, 0, 917507, 15, 0 )

[node name="Units" type="TileMap" parent="."]
format = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -80.0
margin_bottom = 256.0
color = Color( 0.290196, 0.027451, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 256.0
margin_right = 336.0
margin_bottom = 256.0
color = Color( 0.290196, 0.027451, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nextTurnBtn" type="Button" parent="."]
margin_left = 259.049
margin_top = 225.975
margin_right = 333.049
margin_bottom = 250.975
text = "Next Turn"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="econStat" type="RichTextLabel" parent="."]
margin_left = 261.975
margin_top = 9.21513
margin_right = 331.975
margin_bottom = 36.2151
text = "MON MON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="currentPhase" type="RichTextLabel" parent="."]
margin_left = -75.0
margin_top = 197.0
margin_right = -2.0
margin_bottom = 248.0
text = "Current Phase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notificationBox" type="HBoxContainer" parent="."]
margin_left = 55.0
margin_top = 111.0
margin_right = 223.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="phaseNotification" type="TextEdit" parent="notificationBox"]
margin_right = 168.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.905882, 1, 0, 1 )
custom_colors/background_color = Color( 0.270588, 0.0901961, 0.27451, 1 )
text = "PHASE NOTIFICATION"
readonly = true
syntax_highlighting = true
selecting_enabled = false
hiding_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
